feat(payment): 增加支付单模拟完成接口
